# Playground_Senior

Assignment_1/: CMakeLists.txt  main.cpp
Assignment_2/: CMakeLists.txt
Assignment_3/: CMakeLists.txt  main.cpp
Assignment_3/lib/: CMakeLists.txt
Assignment_3/lib/header/: ActivationLayer.h  InputLayer.h  Layer.h  LinearLayer.h  Model.h
Assignment_4/: main.cpp
Assignment_4/lib/: ActivationFunctions.cpp  CMakeLists.txt  LinearLayer.cpp  Util.cpp
Assignment_5/: CMakeLists.txt  main.cpp
Assignment_6/: CMakeLists.txt
Assignment_6/lib/: Util.cpp
Assignment_6/lib/header/: Util.h
Assignment_7/: CMakeLists.txt  bias_0.cpp  bias_2.cpp  bias_4.cpp  bias_6.cpp  main.cpp  weight_2.cpp  weight_4.cpp  weight_6.cpp
Assignment_7/lib/: ActivationLayer.cpp  CMakeLists.txt  InputLayer.cpp  LinearLayer.cpp  Model.cpp  weights.pb.cc
Assignment_7/lib/header/: ActivationFunctions.h  Global.h  weights.pb.h
Assignment_7/protobuf/: senior.proto  weights.proto  weights_pb2.py
CMake_tutorial/: CMakeLists.txt  main.cpp
CMake_tutorial/lib/: mylib.cpp  mylib.h
